# nectus

./: .gitignore  AGENTS.md  AUDIT_FIXES_PLAN.md  CLAUDE_ROLLING_UPDATES.md  CODEX_ROLLING_UPDATES.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  codex-session-jsonl.md  command-redesign-plan.md  css-system-rework-plan.md  features.md  github-integration.md  jira-integration.md  tracking-and-debugging.md
docs/superpowers/: 2026-06-15-acp-multi-cli-chat-rolling-plan.md  README.md
native/: .taurignore  Cargo.toml  tauri.conf.json
native/capabilities/: default.json
native/scripts/: sync-codex-protocol-types.sh
native/src/: db.rs  diagnostics.rs  git_ops.rs  github.rs  jira.rs  jira_rest.rs  jira_secret.rs  lib.rs  main.rs  models.rs  process_util.rs  sessions.rs
native/src/db/: agent_profiles.rs  chat.rs  invariants.rs  migrations.rs  mod.rs  pr_reviews.rs  review_loops.rs  rows.rs  schema.rs  sessions.rs  settings.rs  tasks.rs  tests.rs  workspaces.rs
native/src/git_ops/: diff.rs  mod.rs
native/src/jira_fixtures/: README.md  project_list.json  project_statuses.json  scrub.py  search.json  transitions.json  view_simple.json  view_with_assignee.json
native/src/models/: agent.rs  chat.rs  error.rs  github.rs  jira.rs  mod.rs  review.rs  session.rs  settings.rs  task.rs  workspace.rs
native/src/sessions/: acp.rs  acp_manager.rs  claude.rs  codex.rs  codex_tests.rs  command.rs  mod.rs  opencode.rs  pr_consensus.rs  pr_review.rs  pr_verdict.rs  pr_worktree.rs  provider.rs  review_loop.rs  review_runtime.rs  reviewer.rs  reviewer_output.rs  terminal_io.rs  tmux.rs  verdict.rs
native/src/sessions/agents/: antigravity.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
scripts/: desktop-dev-green.sh
src/: App.test.tsx  App.tsx  AppRouter.tsx  TerminalPane.test.tsx  TerminalPane.tsx  ToastNotification.tsx  api.test.ts  api.ts  demoData.ts  layoutStyles.test.ts  main.tsx  notificationText.test.ts  notificationText.ts  sessionAttention.test.ts  sessionAttention.ts  sessionNotifications.test.ts  sessionNotifications.ts  statusLabels.test.ts  statusLabels.ts  styles.css  taskNavigation.test.ts  taskNavigation.ts  taskNotification.test.ts  taskNotification.ts  types.ts
src-tauri/src/: db.rs  git_ops.rs  lib.rs
src/components/: AgentBrand.test.tsx  AgentBrand.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CreateTaskComposer.test.tsx  CreateTaskComposer.tsx  CreateTaskModal.tsx  GitHubPanel.test.tsx  GitHubPanel.tsx  IconRail.tsx  JiraBoardBody.tsx  JiraBoardPage.test.tsx  JiraBoardPage.tsx  JiraCard.tsx  JiraCreateWorkItemPanel.test.tsx  JiraCreateWorkItemPanel.tsx  JiraPanel.tsx  JiraSprintBody.tsx  JiraWorkItemDialog.test.tsx  JiraWorkItemDialog.tsx  MissionControl.tsx  PrReviewBadge.tsx  PrReviewDetail.test.tsx  PrReviewDetail.tsx  ProjectPanel.tsx  ProjectRowMenu.tsx  ReviewTerminalPane.tsx  ReviewsPage.test.tsx  ReviewsPage.tsx  RunningAgentsFlyout.test.tsx  RunningAgentsFlyout.tsx  SettingsPage.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarAgentRow.test.tsx  SidebarAgentRow.tsx  TaskCard.test.tsx  TaskCard.tsx  TaskDeleteDialog.tsx  TaskDetailDrawer.test.tsx  (+18 more)
src/hooks/: useApp.test.tsx  useApp.ts  useAppTheme.test.tsx  useAppTheme.ts  useAppUpdate.test.tsx  useAppUpdate.ts  useAppUpdateToast.test.tsx  useAppUpdateToast.ts  useAsyncEffect.ts  useCommandPaletteShortcut.test.ts  useCommandPaletteShortcut.ts  useComposer.test.tsx  useComposer.ts  useCreateTaskForm.ts  useDiagnostics.ts  useEventBridge.test.tsx  useEventBridge.ts  useGithub.test.tsx  useGithub.ts  useJira.test.ts  (+46 more)
(+147 files in other folders)
