[package]
name = "nectus-desktop"
version = "0.1.0"
description = "Parallel Codex and Claude worktree manager"
authors = ["Tomas"]
edition = "2021"

[lib]
name = "nectus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
parking_lot = "0.12"
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
which = "8"

[dev-dependencies]
tempfile = "3"
