[package]
name = "nectus-desktop"
# App version is the single source of truth in /package.json, read at build time
# via tauri.conf.json's `"version": "../package.json"`. Nothing reads
# CARGO_PKG_VERSION, so this crate version is intentionally frozen and unused for
# app/bundle versioning — do not bump it per release.
version = "0.0.0"
description = "Parallel Codex and Claude worktree manager"
authors = ["Tomas"]
edition = "2021"

[lib]
name = "nectus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-client-protocol = "0.14"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
# `apple-native` is required: keyring 3 makes platform keystores opt-in and
# silently falls back to an in-memory mock store without it — tokens would
# "save" but vanish on app relaunch.
keyring = { version = "3", features = ["apple-native"] }
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json", "native-certs"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
which = "8"

[dev-dependencies]
tempfile = "3"
